--- a/web/static/main.css
+++ b/web/static/main.css
@@ -5,6 +5,29 @@ body{
     min-width: 320px;
 }
 
+canvas{
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: -1;
+}
+
+#playback{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+
+img#logo{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 200px;
+}
+
 a{
     color: white;
     text-decoration: none;
@@ -12,17 +35,13 @@ a{
 
 header, section, footer{
     text-align: center;
+    margin: 2em;
 }
 
 h1{
     font-size: 2em;
     font-weight: 700;
     margin-bottom: -0.3em;
-}
-
-img#logo{
-    max-height: 200px;
-    width: auto;
 }
 
 #now-playing #title{
@@ -48,10 +67,10 @@ img#logo{
     }
 }
 
-#links{
-    margin: 2em 0;
-}
-
 footer{
+    text-align: left;
     margin-top: 5em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
