Fix some issues
- Display global position where it needs
- Fix issue where "play next" button does not change user position in
  queue
- Fix issue where an exception occurs where user tries to refresh
  info about absent song

--- a/frontend/tg_templates/main_menu_keyboard.tmpl
+++ b/frontend/tg_templates/main_menu_keyboard.tmpl
@@ -10,10 +10,10 @@
     {% endif %}
 {% endif %}
 {% if queue_len %}
-    📂 Очередь: {{ queue_len | make_caption(['трек', '', 'а', 'а', 'а', 'ов']) }} | callback_data=queue:0
+    📂 Очередь: {{ queue_len | make_caption(['пользовател', 'ь', 'я', 'я', 'я', 'ей']) }} | callback_data=queue:0
 {% endif %}
 {% for pos in my_songs %}
-    #{{ pos + 1 }}: {{ my_songs[pos].full_title() }} | callback_data=song:{{ my_songs[pos].id }}
+    #{{ pos }}: {{ my_songs[pos].full_title() }} | callback_data=song:{{ my_songs[pos].id }}
 {% endfor %}
 {% if superuser %}
     👥 Пользователи | callback_data=admin:list_users:0
