--- a/frontend/tg_templates/song_info_text.tmpl
+++ b/frontend/tg_templates/song_info_text.tmpl
@@ -1,8 +1,9 @@
 {% if song is none %}
 🚫 Не удалось загрузить информацию о песне
+Возможно, она была удалена или уже запущена
 {% else %}
 🎵 {{ song.full_title() }}
 
 Длительность: {{ song.duration | format_duration }}
-Место в очереди: {{ position }}
+Место в очереди: {{ global_position }} (может измениться)
 {% endif %}
