Fix some issues (2)
Issues fixed with this commit:
- 500 http code is returned when nothing is playing
- some tracks may be skipped
- user does can't get menu if nothing is playing
- many exceptions occur when app is being stopped

--- a/frontend/tg_templates/main_menu_text.tmpl
+++ b/frontend/tg_templates/main_menu_text.tmpl
@@ -1,9 +1,11 @@
-{% if current_song is not none %}
+{% if current_song %}
 🔊 [{{ current_song_progress | format_duration }} / {{ current_song.duration | format_duration }}]    👤 {{ current_user.name if current_user else "Студсовет" }}
 {{ current_song.full_title() }}
-
+{% else %}
+🔇 Сейчас ничего не играет
 {% endif %}
-{% if superuser and next_song is not none %}
+
+{% if superuser and next_song %}
 Следующий трек:
 ⏱ {{ next_song.duration | format_duration }}    👤 {{ next_user.name if next_user else "Студсовет" }}
 {{ next_song.full_title() }}
