--- a/frontend/tg_templates/main_menu_keyboard.tmpl
+++ b/frontend/tg_templates/main_menu_keyboard.tmpl
@@ -12,9 +12,13 @@
 {% if queue_len %}
     📂 Очередь: {{ queue_len | make_caption(['пользовател', 'ь', 'я', 'я', 'я', 'ей']) }} | callback_data=queue:0
 {% endif %}
-{% for pos in my_songs %}
-    #{{ pos }}: {{ my_songs[pos].full_title() }} | callback_data=song:{{ my_songs[pos].id }}
-{% endfor %}
+{% if my_songs | length < 5 %}
+    {% for pos in my_songs %}
+        #{{ pos }}: {{ my_songs[pos].full_title() }} | callback_data=song:{{ my_songs[pos].id }}
+    {% endfor %}
+{% else %}
+    🎶 Мои треки | callback_data=my_tracks
+{% endif %}
 {% if superuser %}
     👥 Пользователи | callback_data=admin:list_users:0
 {% endif %}
