--- a/frontend/tg_templates/song_info_keyboard.tmpl
+++ b/frontend/tg_templates/song_info_keyboard.tmpl
@@ -1,12 +1,12 @@
 {% if song %}
     {% if superuser or user.id == song.user_id %}
-    {{ "✅" if hated else "👎" }} Плохая музыка ({{ song.haters | length }}) | callback_data=vote:down:{{ song.id }}
-    🚫 Удалить 🚫 | callback_data=admin:delete:{{ song.id }}
+        {{ "✅" if hated else "👎" }} Плохая музыка ({{ song.haters | length }}) | callback_data=vote:down:{{ song.id }}
+        ⬆️ Играть как можно раньше ⬆️ | callback_data=raise_track:{{ song.id }}
+        🚫 Удалить 🚫 | callback_data=admin:delete:{{ song.id }}
     {% else %}
-    {{ "✅" if hated else "👎" }} Плохая музыка | callback_data=vote:down:{{ song.id }}
+        {{ "✅" if hated else "👎" }} Плохая музыка | callback_data=vote:down:{{ song.id }}
     {% endif %}
     {% if superuser %}
-        ⬆️ Играть следующим ⬆️ | callback_data=admin:raise:{{ song.id }}
         {% if author is none %}
             - 👨‍🎓 - | callback_data=//
         {% else %}
