--- a/frontend/tg_templates/user_info_keyboard.tmpl
+++ b/frontend/tg_templates/user_info_keyboard.tmpl
@@ -3,8 +3,8 @@
 {% endfor %}
 ⬆️ Поместить в начало очереди ⬆️ | callback_data=admin:raise_user:{{ info.id }}
 {% if info.banned %}
-    Разбанить | admin:unban_user:{{ info.id }}
+    ✅ Разбанить ✅ | callback_data=admin:unban_user:{{ info.id }}
 {% else %}
-    Забанить нафиг | admin:ban_user:{{ info.id }}
+    📛 Забанить нафиг 📛 | callback_data=admin:ban_user:{{ info.id }}
 {% endif %}
 {{ STR_BACK }} | callback_data=admin:list_users:0 || {{ STR_REFRESH_SMALL }} | callback_data=admin:user_info:{{ info.id }} || {{ STR_HOME }} | callback_data=main
