Load lyrics from lyrics wikia

--- a/frontend/tg_templates/main_menu_keyboard.tmpl
+++ b/frontend/tg_templates/main_menu_keyboard.tmpl
@@ -1,3 +1,6 @@
+{% if current_song is not none and current_song.has_lyrics() %}
+    📄 Текст песни | callback_data=lyrics
+{% endif %}
 {% if superuser %}
     {% if current_song is not none %}
         ⏹ Остановить | callback_data=admin:stop_playing || ▶️ Переключить | callback_data=skip_song
