--- a/web/static/main.css
+++ b/web/static/main.css
@@ -21,9 +21,9 @@ canvas{
 
 img#logo{
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    right: 0;
+    bottom: 0;
+    margin: 0.5em;
     width: 200px;
     height: 200px;
     cursor: pointer;
