--- a/discord_/templates/en/search_msg.tmpl
+++ b/discord_/templates/en/search_msg.tmpl
@@ -1,4 +1,4 @@
-Выбирай:
+Choose one below (tap on emoji):
 {% for result in results %}
     {{ result.emoji }} {{ result.artist }} - {{ result.title }} ({{ result.duration | format_duration }})
 {% endfor %}
